--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="https://unpkg.com/swiper@8/swiper-bundle.min.css"/>
-    <link rel="stylesheet" href="https://ryoweb39.github.io/portfolio/css/style.css">
-    <link rel="stylesheet" href="https://ryoweb39.github.io/portfolio/css/animate.css">
+    <link rel="stylesheet" href="https://RYOweb39.github.io/portfolio/css/style.css">
+    <link rel="stylesheet" href="https://RYOweb39.github.io/portfolio/css/animate.css">
 </head>
 <body>
 <header class="header">
