--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="https://unpkg.com/swiper@8/swiper-bundle.min.css"/>
-    <link rel="stylesheet" href="https://RYOweb39.github.io/portfolio/style.css">
+    <link rel="stylesheet" href="https://RYOweb39/portfolio/style.css">
     <link rel="stylesheet" href="https://RYOweb39.github.io/portfolio/animate.css">
 </head>
 <body>
