--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
     <title>Document</title>
     <link rel="stylesheet" href="https://unpkg.com/swiper@8/swiper-bundle.min.css"/>
     <link rel="stylesheet" href="https://RYOweb39/portfolio/style.css">
-    <link rel="stylesheet" href="https://RYOweb39.github.io/portfolio/animate.css">
+    <link rel="stylesheet" href="https://RYOweb39/portfolio/animate.css">
 </head>
 <body>
 <header class="header">
     <div class="header-inner inner">
-        <h1 class="header-logo"><a href="/"><img src="img/logo.png" alt=""></a></h1>
+        <h1 class="header-logo"><a href="/"><img src="https://RYOweb39/portfolio/logo.png" alt=""></a></h1>
         <ul class="header-nav">
             <li><a href="#card">Card</a></li>
             <li><a href="#news">News</a></li>
@@ -101,32 +101,32 @@
         <div class="card_head section_title">Card</div>
         <div class="card_items">
             <div class="card_item wow fadeInUp" data-wow-duration="1s">
-                <div class="card_img"><img src="img/card-img.png" alt=""></div>
+                <div class="card_img"><img src="https://RYOweb39/portfolio/card-img.png" alt=""></div>
                 <div class="card_title">タイトルタイトル</div>
                 <div class="card_text">テキストテキストテキストテキストテキストテキストテキストテキストテキスト</div>
             </div>
             <div class="card_item wow bounce">
-                <div class="card_img"><img src="img/card-img.png" alt=""></div>
+                <div class="card_img"><img src="https://RYOweb39/portfolio/card-img.png" alt=""></div>
                 <div class="card_title">タイトルタイトル</div>
                 <div class="card_text">テキストテキストテキストテキストテキストテキストテキストテキストテキスト</div>
             </div>
             <div class="card_item">
-                <div class="card_img"><img src="img/card-img.png" alt=""></div>
+                <div class="card_img"><img src="https://RYOweb39/portfolio/card-img.png" alt=""></div>
                 <div class="card_title">タイトルタイトル</div>
                 <div class="card_text">テキストテキストテキストテキストテキストテキストテキストテキストテキスト</div>
             </div>
             <div class="card_item">
-                <div class="card_img"><img src="img/card-img.png" alt=""></div>
+                <div class="card_img"><img src="https://RYOweb39/portfolio/card-img.png" alt=""></div>
                 <div class="card_title">タイトルタイトル</div>
                 <div class="card_text">テキストテキストテキストテキストテキストテキストテキストテキストテキスト</div>
             </div>
             <div class="card_item">
-                <div class="card_img"><img src="img/card-img.png" alt=""></div>
+                <div class="card_img"><img src="https://RYOweb39/portfolio/card-img.png" alt=""></div>
                 <div class="card_title">タイトルタイトル</div>
                 <div class="card_text">テキストテキストテキストテキストテキストテキストテキストテキストテキスト</div>
             </div>
             <div class="card_item">
-                <div class="card_img"><img src="img/card-img.png" alt=""></div>
+                <div class="card_img"><img src="https://RYOweb39/portfolio/card-img.png" alt=""></div>
                 <div class="card_title">タイトルタイトル</div>
                 <div class="card_text">テキストテキストテキストテキストテキストテキストテキストテキストテキスト</div>
             </div>
@@ -273,7 +273,7 @@
     <div class="price2_inner inner">
         <div class="price2_head section_title">Price2</div>
         <div class="price2_content">
-            <div class="price2_img"><img src="img/price-img.png" alt=""></div>
+            <div class="price2_img"><img src="https://RYOweb39/portfolio/price-img.png" alt=""></div>
             <div class="price2_table">
                 <table class="table">
                     <tr>
@@ -469,7 +469,7 @@
         <div class="modal_contact_text">ほにゃららほにゃららほにゃららほにゃららほにゃららほにゃららほにゃららほにゃららほにゃららほにゃららほにゃららほにゃららほにゃららほにゃららほにゃららほにゃららほにゃららほにゃららほにゃららほにゃららほにゃららほにゃららほにゃららほにゃららほにゃららほにゃららほにゃららほにゃららほにゃららほにゃららほにゃららほにゃららほにゃららほにゃららほにゃららほにゃららほにゃららほにゃらら。</div>
     </div>
     <div class="modal_contact_button"><a class="js_close_button" href="" data-target=".target_modal">閉じる</a></div>
-    <div class="modal_contact_icon"><a class="js_close_button" href="" data-target=".target_modal"><img src="/img/btn-batsu.png" alt=""></a></div>
+    <div class="modal_contact_icon"><a class="js_close_button" href="" data-target=".target_modal"><img src="https://RYOweb39/portfolio/btn-batsu.png" alt=""></a></div>
 </div>
 <div class="modal_contact_bg target_modal"></div>
 
@@ -477,7 +477,7 @@
     <div class="footer_inner inner">
         <div class="footer_content">
             <div class="footer_left">
-                <div class="footer_logo"><a href=""><img src="./img/logo.png" alt=""></a></div>
+                <div class="footer_logo"><a href=""><img src="https://RYOweb39/portfolio/logo.png" alt=""></a></div>
                 <div class="footer_address">住所：ほげほげのほげほげ</div>
                 <div class="footer_tel">TEL：0000-00-0000</div>
             </div>
@@ -492,9 +492,9 @@
             </div>
             <div class="footer_right">
                 <ul class="footer_sns">
-                    <li><a href="" target="_blank"><img src="./img/twitter.png" alt=""></a></li>
-                    <li><a href="" target="_blank"><img src="./img/facebook.png" alt=""></a></li>
-                    <li><a href="" target="_blank"><img src="./img/instagram.png" alt=""></a></li>
+                    <li><a href="" target="_blank"><img src="https://RYOweb39/portfolio/twitter.png" alt=""></a></li>
+                    <li><a href="" target="_blank"><img src="https://RYOweb39/portfolio/facebook.png" alt=""></a></li>
+                    <li><a href="" target="_blank"><img src="https://RYOweb39/portfolio/instagram.png" alt=""></a></li>
                 </ul>
             </div>
         </div>
@@ -502,12 +502,12 @@
     </div>
 </footer>
 
-<div class="totop"><a href="#"><img src="/img/totop.png" alt=""></a></div>
+<div class="totop"><a href="#"><img src="https://RYOweb39/portfolio/totop.png" alt=""></a></div>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
-<script src="https://RYOweb39.github.io/portfolio/script.js"></script>
-<script src="https://RYOweb39.github.io/portfolio/wow.min.js"></script>
+<script src="https://RYOweb39/portfolio/script.js"></script>
+<script src="https://RYOweb39/portfolio/wow.min.js"></script>
 <script>
 new WOW().init();
 </script>
