--- a/index.html
+++ b/index.html
@@ -456,6 +456,23 @@
     </div>
 </section>
 
+    <div class="modal_contact target_modal">
+    <div class="modal_contact_head">プライバシーポリシー</div>
+    <div class="modal_contact_content">
+        <div class="modal_contact_subhead">ほにゃらら</div>
+        <div class="modal_contact_text">ほにゃららほにゃららほにゃららほにゃららほにゃららほにゃららほにゃららほにゃららほにゃららほにゃららほにゃららほにゃららほにゃららほにゃららほにゃららほにゃららほにゃららほにゃららほにゃららほにゃららほにゃららほにゃららほにゃららほにゃららほにゃららほにゃららほにゃららほにゃららほにゃららほにゃららほにゃららほにゃららほにゃららほにゃららほにゃららほにゃららほにゃららほにゃらら。</div>
+        <div class="modal_contact_subhead">ほにゃらら</div>
+        <div class="modal_contact_text">ほにゃららほにゃららほにゃららほにゃららほにゃららほにゃららほにゃららほにゃららほにゃららほにゃららほにゃららほにゃららほにゃららほにゃららほにゃららほにゃららほにゃららほにゃららほにゃららほにゃららほにゃららほにゃららほにゃららほにゃららほにゃららほにゃららほにゃららほにゃららほにゃららほにゃららほにゃららほにゃららほにゃららほにゃららほにゃららほにゃららほにゃららほにゃらら。</div>
+        <div class="modal_contact_subhead">ほにゃらら</div>
+        <div class="modal_contact_text">ほにゃららほにゃららほにゃららほにゃららほにゃららほにゃららほにゃららほにゃららほにゃららほにゃららほにゃららほにゃららほにゃららほにゃららほにゃららほにゃららほにゃららほにゃららほにゃららほにゃららほにゃららほにゃららほにゃららほにゃららほにゃららほにゃららほにゃららほにゃららほにゃららほにゃららほにゃららほにゃららほにゃららほにゃららほにゃららほにゃららほにゃららほにゃらら。</div>
+        <div class="modal_contact_subhead">ほにゃらら</div>
+        <div class="modal_contact_text">ほにゃららほにゃららほにゃららほにゃららほにゃららほにゃららほにゃららほにゃららほにゃららほにゃららほにゃららほにゃららほにゃららほにゃららほにゃららほにゃららほにゃららほにゃららほにゃららほにゃららほにゃららほにゃららほにゃららほにゃららほにゃららほにゃららほにゃららほにゃららほにゃららほにゃららほにゃららほにゃららほにゃららほにゃららほにゃららほにゃららほにゃららほにゃらら。</div>
+    </div>
+    <div class="modal_contact_button"><a class="js_close_button" href="" data-target=".target_modal">閉じる</a></div>
+    <div class="modal_contact_icon"><a class="js_close_button" href="" data-target=".target_modal"><img src="/img/btn-batsu.png" alt=""></a></div>
+</div>
+<div class="modal_contact_bg target_modal"></div>
+    
 <footer class="footer">
     <div class="footer_inner inner">
         <div class="footer_content">
