--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="https://unpkg.com/swiper@8/swiper-bundle.min.css"/>
-    <link rel="stylesheet" href="https://RYOweb39.github.io/portfolio/style.css">
-    <link rel="stylesheet" href="https://RYOweb39.github.io/portfolio/animate.css">
+    <link rel="stylesheet" href="https://RYOweb39/portfolio/style.css">
+    <link rel="stylesheet" href="https://RYOweb39/portfolio/animate.css">
 </head>
 <body>
 <header class="header">
@@ -506,8 +506,8 @@
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
-<script src="https://RYOweb39/portfolio/script.js"></script>
-<script src="https://RYOweb39/portfolio/wow.min.js"></script>
+<!-- <script src="https://RYOweb39/portfolio/script.js"></script> -->
+<!-- <script src="https://RYOweb39/portfolio/wow.min.js"></script> -->
 <script>
 new WOW().init();
 </script>
